Fix position of invisible link over logo SVG

--- a/_scss/default.scss
+++ b/_scss/default.scss
@@ -20,7 +20,7 @@ h1 {
 		text-indent: -9999em;
 		position: absolute;
 		top: 0;
-		left: 0;
+		left: 15px;
 		padding: 0 !important;
 		width: 206px !important;
 		height: 45px;
